maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:54: error: not found: value lX
    lX=x::lX
    ^ShortestPathMaze:55: error: not found: value lY
    lY=y-1::lY
    ^ShortestPathMaze:59: error: not found: value lX
    lX=x-1::lX
    ^ShortestPathMaze:60: error: not found: value lY
    lY=y::lY
    ^ShortestPathMaze:64: error: not found: value lX
    lX=x::lX
    ^ShortestPathMaze:65: error: not found: value lY
    lY=y+1::lY
    ^ShortestPathMaze:69: error: not found: value lX
    lX=x+1::lX
    ^ShortestPathMaze:70: error: not found: value lY
    lY=y::lY
    ^